--- a/CensoWeb/pom.xml
+++ b/CensoWeb/pom.xml
@@ -35,11 +35,14 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
-        </dependency>    
-    </dependencies>
-    
-    
-     <build>
+        </dependency>      
+        <dependency>
+                <groupId>org.primefaces</groupId>
+                <artifactId>primefaces</artifactId>
+                <version>10.0.0</version>
+        </dependency>  
+    </dependencies> 
+        <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
