--- a/CensoWeb/src/main/webapp/WEB-INF/web.xml
+++ b/CensoWeb/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>uso_comercial.xhtml</welcome-file>
+        <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
     <mime-mapping>
         <extension>ttf</extension>
